- Added help to side panel in dashboards stats.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,7 +107,7 @@ a:focus {
 /* The sidepanel menu */
 .sidepanel {
   height: 100%; /* Specify a height */
-  width: 0; /* 0 width-change this with JavaScript */
+  width: 450px; /* 0 width-change this with JavaScript */
   position: fixed; /* Stay in place */
   z-index: 1; /* Stay on top */
   top: 66px;
@@ -705,4 +705,7 @@ img {
 }
 .holders{
   opacity:0.05;
+}
+.info{
+  color:#d2d5d7;
 }
