_ fixed style minor issues in dashboards stats and home page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -89,27 +89,27 @@
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#seta-tab" style="display:inline;">Set A</a>
             <span style="display:inline;">
-              <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparetive analetics" data-content="Comparetive analetics are implemented for two sets of data, varying insize(set A and set B). This tab represents set A members input." data-placement="top" class="info fa fa-info-circle"></a>
+              <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set A members input." data-placement="top" class="info fa fa-info-circle"></a>
             </span>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#setb-tab" style="display:inline;">Set B</a>
             <span style="display:inline;">
-               <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparetive analetics" data-content="Comparetive analetics are implemented for two sets of data, varying insize(set A and set B). This tab represents set B members input." data-placement="top" class="info fa fa-info-circle"></a>
+               <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input." data-placement="top" class="info fa fa-info-circle"></a>
             </span>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#search-tab" style="display:inline;">Search </a>
             <span style="display:inline;">
-                <a href="#" data-toggle="popover" data-trigger="focus" title="Instagram general search ops" data-content="General search operations of Instagram gets a text query and returns data items under 3 diffrent set of results: users, locations and hashtags. Every of which includes an array of foun related records(returns an objects of tree arrays)." data-placement="top" class="info fa fa-info-circle"></a>
+                <a href="#" data-toggle="popover" data-trigger="focus" title="Instagram general search ops" data-content="General search operations of Instagram gets a text query and returns data items under 3 different set of results: users, locations and hashtags. Every of which includes an array of founded  related records(returns an objects of tree arrays)." data-placement="top" class="info fa fa-info-circle"></a>
             </span>
 
 
           </li>
           <li class="nav-item">
             <br>
-            <input  style="width:40%; display:inline;margin:5px;padding:10px;" placeholder="Count limit" type="number" class="form-control" id="count-input" count=0>
-            <span><a href="#" data-toggle="popover" data-trigger="focus" title="Returned records upper limit" data-content="For Instagram ETL and browsing operations which do not present -ALL- on their title, limit the count of returend records by setting this parameter.   " data-placement="top" class="info fa fa-info-circle"></a></span>
+            <input  style="width:40%; display:inline;margin:5px;padding:10px;margin-left:20px;" placeholder="Count limit" type="number" class="form-control" id="count-input" count=0>
+            <span><a href="#" data-toggle="popover" data-trigger="focus" title="Returned records upper limit" data-content="For Instagram ETL and browsing operations which do not present -ALL- on their title, limit the count of returned records by setting this parameter." data-placement="top" class="info fa fa-info-circle"></a></span>
             <input  style="width:40%; display:inline;margin:5px;padding:10px;" placeholder="Set limit"  type="number" class="form-control" id="set-limit-input" count=0>
               <span><a href="#" data-toggle="popover" data-trigger="focus" title="Set members upper limit" data-content="Maximum number of set members get in to account for full data extraction, as a dynamic parameter." data-placement="top" class="info fa fa-info-circle"></a></span>
           </li>
