- Updated help in main page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -169,12 +169,12 @@
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="seta-tab">
             <br>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set A" data-content="Data set A" data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This part represents set A members input."  data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="setb-tab">
             <br>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em;" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set B" data-content="Data set B" data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="search-tab">
             <br>
