- Updated element's help in main page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -149,11 +149,11 @@
             <input type="text" placeholder="Short code" class="form-control" id="shortcode-input" short-code="short-code"style="display: inline;">
             <a href="#" data-toggle="popover" data-trigger="focus" title="Short code" data-content="Post short code" data-placement="top" class="info fa fa-info-circle"></a><br>
             <button class="btn btn-primary etl-btn" type="button"  value="Get post media" click-target="/instagram/post?" call-type="post-json">Media</button>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Get post media" data-content="Get post media" data-placement="top" class="info fa fa-info-circle"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets post media" data-placement="top" class="info fa fa-info-circle"></a>
             <button class="btn btn-primary etl-btn" type="button"  value="Get post likes" click-target="/instagram/likes?" call-type="post-likes">Likes</button>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Get post likes" data-content="Get post likes" data-placement="top" class="info fa fa-info-circle"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets post likes" data-placement="top" class="info fa fa-info-circle"></a>
             <button class="btn btn-primary etl-btn" type="button"  value="Get post comments" click-target="/instagram/comments?" call-type="post-comments">Comments</button>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Get post comments" data-content="Get post comments" data-placement="top" class="info fa fa-info-circle"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" data-content="Gets post comments" data-placement="top" class="info fa fa-info-circle"></a>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="loctag-tab">
             <br>
