-Removed OverlayScrollbars! such an annoying library- probably move to jquery scrollbars

--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/css/jquery.tagsinput.min.css">
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/dashboard.css">
-<link rel="stylesheet" href="/css/OverlayScrollbars.min.css">
+<!--<link rel="stylesheet" href="/css/OverlayScrollbars.min.css">-->
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 
 
