--- a/src/views/layouts/layouts-javascripts-head.ejs
+++ b/src/views/layouts/layouts-javascripts-head.ejs
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="/js/jquery.form.min.js"></script>
 <script type="text/javascript" src="/js/popper.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>
+<!--<script type="text/javascript" src="/js/OverlayScrollbars.min.js"></script>-->
 <script type="text/javascript" src="/js/echarts.min.js"></script>
 <script type="text/javascript" src="/js/geo/world.js"></script>
 <script type="text/javascript" src="/js/geo/portugal.js"></script>
