--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -191,8 +191,8 @@
 
   </div>
 </div>
-<script>
+<!--<script>
   OverlayScrollbars(document.querySelectorAll('body'), {
   className : "os-theme-dark",
 });
-</script>
+</script>-->
