- Added reset button to search and tags inputs in home page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -168,13 +168,19 @@
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="seta-tab">
             <br>
+
+            <input id="resetSeta" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary">
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This part represents set A members input." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This part represents set A members input."  data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="setb-tab">
             <br>
+            <input id="resetSetb" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary">
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em;" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="fa fa-info-circle" style="color:#afafb0;margin-left:50%;"></a>
+
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="search-tab">
             <br>
