- Added toggle buttons to home page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -39,8 +39,21 @@
           <input style="margin-bottom:5px;" value="Get sample filters" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets sample filters and sets" data-content="Gets sample filter items and configured set members which are popular Portugies and Iranian brands." data-placement="top" class="info fa fa-info-circle"></a>
           <input style="margin-bottom:5px;" value="Get sets data" type="button" class="btn btn-secondary" id="getSetDataBtn">
-          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a>
-        </div>
+          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
+          <h5 style="margin-left:10px;">Browse recording</h5>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <a href="#" data-toggle="popover" data-trigger="focus" title="Record to database as you browse" data-content="With this option turned on all the data from Instagram will be recorded to database(only public data in compliance to GDPR regulations)." data-placement="top" class="info fa fa-info-circle"></a><br>
+          <h5 style="margin-left:10px;">Set record toggle</h5>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <a href="#" data-toggle="popover" data-trigger="focus" title="Post recording set toggle" data-content="This switch toggles between set A and set B for recording data(only for posts, all other data are unified)." data-placement="top" class="info fa fa-info-circle"></a>
+
+        </div><br>
         <div style=" text-align:center" class="footer">
           <p class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
         </div>
