--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,10 +151,10 @@ a:focus {
 
 /* Style the button that is used to open the sidepanel */
 .instabtn {
- /* width: 200px;
-  min-width: 12%;*/
+  /* width: 200px;
+   min-width: 12%;*/
   height: 50px;
- /* position: fixed;*/
+  /* position: fixed;*/
   font-size: 20px;
   cursor: pointer;
   background-color: #111;
@@ -716,3 +716,66 @@ img {
   color: #FFF;
   z-index:999;
 }
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 51px;
+  height: 24px;
+  margin-left: 8px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
