--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -121,6 +121,26 @@
         </div>
         <div class="widget-notes"></div>
       </div>
+
+      <div class="widget-wrapper">
+        <div class="widget-title">
+          Profiles geo charts A
+        </div>
+        <div  style="max-width:45vw;width:100%;height:200px;" id="geoA" class="widget-stage classa">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
+        </div>
+        <div class="widget-notes"></div>
+      </div>
+      <div class="widget-wrapper">
+        <div class="widget-title">
+          Profiles geo charts B
+        </div>
+        <div  style="max-width:45vw;width:100%;height:200px;" id="geoB" class="widget-stage classb">
+          <img class="holders" data-src="holder.js/100px120?theme=white">
+        </div>
+        <div class="widget-notes"></div>
+      </div>
+
       <div class="widget-wrapper">
         <div class="widget-title">
           Profiles pie charts A
@@ -142,19 +162,18 @@
           <!-- Tab panes -->
           <div style="max-width:45vw" class="tab-content">
             <div style="max-width:45vw" class="tab-pane active container widget-stage classa" id="DoMA">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="DoWA">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classa" id="HoDA">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
           </div>
         </div>
         <div class="widget-notes"></div>
       </div>
-
       <div class="widget-wrapper">
         <div class="widget-title">
           Profiles pie charts B
@@ -176,18 +195,20 @@
           <!-- Tab panes -->
           <div style="max-width:45vw" class="tab-content">
             <div style="max-width:45vw" class="tab-pane active container widget-stage classb" id="DoMB">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="DoWB">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
             <div style="max-width:45vw" class="tab-pane container widget-stage classb" id="HoDB">
-              <img class="holders" data-src="holder.js/78px120?theme=white">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
             </div>
           </div>
         </div>
         <div class="widget-notes"></div>
       </div>
+
+
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
