-Fixed minor issues in login waiting indicator

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -35,6 +35,7 @@
           <a href="/registration" style="cursor:pointer;" id="registration" class="button button-primary block signup">
            Signup
           </a>
+          <div id="login-error"style="text-align:center; color:darkred; font-size: 1em;"></div>
         </form>
       </div>
     </div>
