_ Updated charts configurations in dashboard stats.

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -45,7 +45,7 @@
   <div class="dash-container grid grid-split-columns">
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles A
+        Profiles A Followers
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-a" class="widget-stage classa">
         <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -55,7 +55,7 @@
 
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles metrics A
+        Profiles A followers metrics
       </div>
       <div id="profiles-counters-a" class="widget-stage classa counters-stage">
         <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -66,7 +66,7 @@
 
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles B
+        Profiles B Followers
       </div>
       <div style="min-width: 100px;min-height:200px;" id="stats-hbar-b" class="widget-stage classb">
         <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -76,7 +76,7 @@
 
     <div class="widget-wrapper">
       <div  class="widget-title">
-        Profiles metrics B
+        Profiles B followers metrics
       </div>
       <div id="profiles-counters-b" class="widget-stage classb counters-stage">
         <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -87,7 +87,7 @@
     <div class="grid-split">
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles trends A
+          Profiles A recent engagement trends
         </div>
         <div id="lines-seta" class="widget-stage classa">
           <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -96,7 +96,7 @@
       </div>
       <div class="widget-wrapper">
         <div class="widget-title">
-          Profiles trends B
+          Profiles B recent engagement trends
         </div>
         <div id="lines-setb" class="widget-stage classb">
           <img class="holders" data-src="holder.js/100px120?theme=white">
