-changed mistakenly misplaced config items -Fixed a wrong title for new home toggle buttons

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -40,7 +40,7 @@
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets sample filters and sets" data-content="Gets sample filter items and configured set members which are popular Portugies and Iranian brands." data-placement="top" class="info fa fa-info-circle"></a>
           <input style="margin-bottom:5px;" value="Get sets data" type="button" class="btn btn-secondary" id="getSetDataBtn">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
-          <h5 style="margin-left:10px;">Browse recording</h5>
+          <h5 style="margin-left:10px;">Store browsings</h5>
           <label class="switch">
             <input type="checkbox">
             <span class="slider round"></span>
