--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -29,33 +29,66 @@
   <div class="container grid grid-hero-sidebar">
     <div id="home-sidebar" class="sidebar widget-wrapper">
       <div  style="" class="widget-stage">
-        <div style="padding:10px;">
-          <input type="text" style="width:70%;display:inline;margin:5px;" class="form-control" id="search-input" search-query="search-query">
-          <input id="searchProfileBtn" style="text-align:center;display:inline; padding:5px; margin:5px; min-width:5%" value="Go" type="button" class="btn btn-secondary">
+        <div style="padding:10px;width:356px;">
+          <input type="text" style="width:65%;display:inline;margin:5px;" class="form-control" id="search-input" search-query="search-query">
+          <input id="searchProfileBtn" value="Go" type="button" class="btn btn-secondary">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Search instagram for profiles" data-content="Search instagram for user profiles name which searches instagram API directly and then you can drag & drop results in to user profiles inputs like set A,set B and user profile name." data-placement="bottom" class="info fa fa-info-circle"></a>
-          <div style="overflow-y:scroll;max-height:20vh;margin-bottom:25px;color:black;background-color: #7f7d7d;" id="autocomplete-results"></div><br>
+          <div style="overflow-y:scroll;max-height:20vh;margin-bottom:25px;color:black;background-color: #f1f1f2;" id="autocomplete-results"></div><br>
+          <input style="margin-bottom:5px;background-color: #1995ad;border-color: #1995ad;" value="Get sample filters" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
+          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets sample filters and sets" data-content="Gets sample filter items and configured set members which are popular Portugies and Iranian brands." data-placement="top" class="info fa fa-info-circle"></a><br>
+
+          <div style="width:50%;float:left;">
+            <h5 style="margin-left:10px;">Store browsings</h5>
+            <label class="switch">
+              <input id="storeBrowsingBtn" type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Record to database as you browse" data-content="With this option turned on all the data from Instagram will be recorded to database(only public data in compliance to GDPR regulations)." data-placement="top" class="info fa fa-info-circle"></a>
+          </div>
+          <div id="setToggleDiv" style="width:50%;" class="hidden">
+            <h5 style="margin-left:10px;">Set toggle</h5>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Post recording set toggle" data-content="This switch toggles between set A and set B for recording data(only for posts, all other data are unified)." data-placement="top" class="info fa fa-info-circle"></a><br>
+          </div>
+          <br>
+          <div style="width:50%;">
+            <h5 style="margin-left:10px;">All posts</h5>
+            <label class="switch">
+              <input id="allPostsBtn" type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Get all posts" data-content="Switch to turn on|off getting all posts for each profile of sets." data-placement="top" class="info fa fa-info-circle"></a>
+          </div>
+
+          <div id="commentsDiv" style="width:50%;float:left;" class="hidden">
+            <h5 style="margin-left:10px;">Comments</h5>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Get all comments" data-content="Switch to turn on|off getting all comments by each posts of each profile in set." data-placement="top" class="info fa fa-info-circle"></a>
+          </div>
+
+          <div id="locationDiv" style="width:50%;" class="hidden">
+            <h5 style="margin-left:10px;">Location</h5>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider round"></span>
+            </label>
+            <a href="#" data-toggle="popover" data-trigger="focus" title="Get all locations" data-content="Geo codes each posts of each profile of sets via OSM nominatim API." data-placement="top" class="info fa fa-info-circle"></a><br>
+          </div>
+          <br>
+          <input style="margin-bottom:5px;background-color:#a1d6e2;border-color:#a1d6e2;" value="Get sets data" type="button" class="btn btn-secondary" id="getSetDataBtn">
+          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
           <div id="countera" class="stats-totals"></div><br>
           <div id="counterb" class="stats-totals"></div><br>
-          <input style="margin-bottom:5px;" value="Get sample filters" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
-          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets sample filters and sets" data-content="Gets sample filter items and configured set members which are popular Portugies and Iranian brands." data-placement="top" class="info fa fa-info-circle"></a>
-          <input style="margin-bottom:5px;" value="Get sets data" type="button" class="btn btn-secondary" id="getSetDataBtn">
-          <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
-          <h5 style="margin-left:10px;">Store browsings</h5>
-          <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          <a href="#" data-toggle="popover" data-trigger="focus" title="Record to database as you browse" data-content="With this option turned on all the data from Instagram will be recorded to database(only public data in compliance to GDPR regulations)." data-placement="top" class="info fa fa-info-circle"></a><br>
-          <h5 style="margin-left:10px;">Set record toggle</h5>
-          <label class="switch">
-            <input type="checkbox">
-            <span class="slider round"></span>
-          </label>
-          <a href="#" data-toggle="popover" data-trigger="focus" title="Post recording set toggle" data-content="This switch toggles between set A and set B for recording data(only for posts, all other data are unified)." data-placement="top" class="info fa fa-info-circle"></a>
 
         </div><br>
         <div style=" text-align:center" class="footer">
-          <p class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/">Houman Hadian's doctoral project @ UAlg</a></p>
+          <p class="small text-muted">Built with &#9829; for <a target="_blank" href="https://houmanhadian.github.io/" style="color:#1995ad;">Houman Hadian's doctoral project @ UAlg</a></p>
         </div>
       </div>
     </div>
@@ -182,14 +215,14 @@
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="seta-tab">
             <br>
 
-            <input id="resetSeta" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary">
+            <input id="resetSeta" value="Reset set" type="button" class="btn btn-secondary reset-btn">
             <a href="#" data-toggle="popover" data-trigger="focus" title="Set A(first set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This part represents set A members input." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
             <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em" id="seta" class="seta" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="setb-tab">
             <br>
-            <input id="resetSetb" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary">
+            <input id="resetSetb" style="text-align:center;display:inline-block; padding:5px; float:right; margin-right:32%; min-width:16%" value="Reset set" type="button" class="btn btn-secondary reset-btn">
             <a href="#" data-toggle="popover" data-trigger="focus" title="Set B(second set) of comparative analytics" data-content="Comparative analytics are implemented for two sets of data, varying inside(set A and set B). This tab represents set B members input."  data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:2%;"></a>
             <a href="#" data-toggle="popover" data-trigger="focus" title="Reset sets" data-content="Resets the filters only to configured predefined values(via configuration files)." data-placement="top" class="info fa fa-info-circle" style="float:right;display: inline;margin-right:-23%;"></a>
             <textarea style="display:block; padding:5px; margin:10px; min-height:200px;width:25em;" id="setb" class="setb" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: inline;"></textarea>
