-Final field changes in stats data ops due to change of post and media structure for efficiency.

--- a/src/views/layouts/layout-home.ejs
+++ b/src/views/layouts/layout-home.ejs
@@ -3,7 +3,7 @@
 <head>
   <%- include ../layouts/layout-header.ejs %>
 </head>
-<body class="">
+<body id="home-body">
 <%- include ../pages/main.ejs %>
 <%- include ../pages/sidepanel.ejs %>
 
