- Updated button style in dashboard stats side panel.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -30,11 +30,11 @@
     <div id="home-sidebar" class="sidebar widget-wrapper">
       <div  style="" class="widget-stage">
         <div style="padding:10px;width:356px;">
-          <input type="text" style="width:65%;display:inline;margin:5px;" class="form-control" id="search-input" search-query="search-query">
+          <input type="text" style="width:65%;display:inline;margin:5px;" class="form-control" id="search-input" placeholder="Search for Instagram account" search-query="search-query">
           <input id="searchProfileBtn" value="Go" type="button" class="btn btn-secondary">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Search instagram for profiles" data-content="Search instagram for user profiles name which searches instagram API directly and then you can drag & drop results in to user profiles inputs like set A,set B and user profile name." data-placement="bottom" class="info fa fa-info-circle"></a>
           <div style="overflow-y:scroll;max-height:20vh;margin-bottom:25px;color:black;background-color: #f1f1f2;" id="autocomplete-results"></div><br>
-          <input style="margin-bottom:5px;background-color: #1995ad;border-color: #1995ad;" value="Get sample filters" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
+          <input value="Get sample filters" type="button" class="btn btn-primary" click-target="/instagram/form/data?" call-type="form-data">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets sample filters and sets" data-content="Gets sample filter items and configured set members which are popular Portugies and Iranian brands." data-placement="top" class="info fa fa-info-circle"></a><br>
 
           <div style="width:50%;float:left;">
